front-end part of adding a todo fully completed

--- a/TODO/templates/todos.html
+++ b/TODO/templates/todos.html
@@ -145,22 +145,22 @@
     <div class="gray_background" id="gray_background"></div>
 
     <form class="add_item_form" id="add_item_form">
-        <div class="item_name">
+        <div class="item_name" id="title">
             <label for="item_title">New Todo Title</label>
             <input type="text" name="item_title" id="item_title" required>
         </div>
 
         <div class="todo_category_select_form">
             <div>
-            <input type="checkbox" id="category_of_todo_1"
-                     name="category_of_todo" value="important">
-            <label for="category_of_todo_1">Important</label>
-                </div>
+                <input type="checkbox" id="category_of_todo_1"
+                         name="category_of_todo" value="important">
+                <label for="category_of_todo_1">Important</label>
+            </div>
             <div>
-            <input type="checkbox" id="category_of_todo_2"
-                     name="category_of_items" value="urgent">
-            <label for="category_of_todo_2">Urgent</label>
-                </div>
+                <input type="checkbox" id="category_of_todo_2"
+                         name="category_of_todo" value="urgent">
+                <label for="category_of_todo_2">Urgent</label>
+            </div>
         </div>
 
         <div class="add_item_buttons">
