--- a/TODO/templates/todos.html
+++ b/TODO/templates/todos.html
@@ -144,7 +144,7 @@
 
     <div class="gray_background" id="gray_background"></div>
 
-    <form class="add_item_form" id="add_item_form">
+    <form class="add_item_form" id="todo">
         <div class="item_name" id="title">
             <label for="item_title">New Todo Title</label>
             <input type="text" name="item_title" id="item_title" required>
