--- a/TODO/templates/habits.html
+++ b/TODO/templates/habits.html
@@ -113,7 +113,7 @@
         </div>
 
         <div class="add_item_buttons">
-            <input class="button_to_cancel" id="button_to_cancel" type="button" onclick="change_add_item_form_visibility_state('none')" value="Cancel">
+            <input class="button_to_cancel" id="button_to_cancel" type="button" onclick="finish_work_with_add_habit_form()" value="Cancel">
             <input class="button_to_submit" id="button_to_submit" type="submit" value="Add">
         </div>
     </form>
