created back-end part of adding todo

--- a/TODO/templates/habits.html
+++ b/TODO/templates/habits.html
@@ -35,50 +35,7 @@
     <main>
         <button class="add_todo_button" onclick="change_add_item_form_visibility_state('grid')">Add Habit</button>
 
-        <div class="habits-container">
-            <div class="habit">
-                <p class="habit-title">very very very very very very very long Task 1</p>
-
-                <div class="habit-category">
-                    <div class="bg"></div>
-                    <div class="habit-categoty-text">easy</div>
-                </div>
-
-                <div class="completed-habit-text">
-                    <p>You can take a break from this task for two days</p>
-                </div>
-
-                <button class="habit-done-button">
-                    <i class="material-icons">done_outline</i>
-                </button>
-                        
-                <button class="habit-delete-button">
-                    <i class="material-icons">delete</i>
-                </button>
-            </div>
-
-            <div class="completed-habit">
-                <p class="habit-title">Task 2</p>
-
-                <div class="habit-category">
-                    <div class="bg"></div>
-                    <div class="habit-categoty-text">easy</div>
-                </div>
-
-                <div class="completed-habit-text">
-                    <p>You can take a break from this task for two days</p>
-                </div>
-
-                <button class="habit-done-button">
-                    <i class="material-icons">done_outline</i>
-                </button>
-
-                <button class="habit-delete-button">
-                    <i class="material-icons">delete</i>
-                </button>
-            </div>
-
-        </div>
+        <div class="habits-container"></div>
     </main>
 
     <div class="gray_background" id="gray_background"></div>
