--- a/TODO/templates/todos.html
+++ b/TODO/templates/todos.html
@@ -63,55 +63,7 @@
             </div>
 
             <section class="todo-category" id="important-urgent">
-                <ol class="important-urgent-list">
-                    <li class="todo-item">
-                      <p class="todo-item-title">very very very very very very very very very very very very very very long Todo 1</p>
-                      <div class="todo-item__controls">
-                        <button class="todo-item-button todo-item-button--done">
-                          <i class="material-icons">done_outline</i>
-                        </button>
-                        <button class="todo-item-button todo-item-button--delete">
-                          <i class="material-icons">delete</i>
-                        </button>
-                      </div>
-                    </li>
-
-                    <li class="complited-todo-item">
-                      <p class="todo-item-title">Completed todo</p>
-                      <div class="todo-item__controls">
-                        <button class="todo-item-button todo-item-button--done">
-                          <i class="material-icons">done_outline</i>
-                        </button>
-                        <button class="todo-item-button todo-item-button--delete">
-                          <i class="material-icons">delete</i>
-                        </button>
-                      </div>
-                    </li>
-
-                    <li class="todo-item">
-                      <p class="todo-item-title">Todo 2</p>
-                      <div class="todo-item__controls">
-                        <button class="todo-item-button todo-item-button--done">
-                          <i class="material-icons">done_outline</i>
-                        </button>
-                        <button class="todo-item-button todo-item-button--delete">
-                          <i class="material-icons">delete</i>
-                        </button>
-                      </div>
-                    </li>
-
-                    <li class="todo-item">
-                      <p class="todo-item-title">Todo 5</p>
-                      <div class="todo-item__controls">
-                        <button class="todo-item-button todo-item-button--done">
-                          <i class="material-icons">done_outline</i>
-                        </button>
-                        <button class="todo-item-button todo-item-button--delete">
-                          <i class="material-icons">delete</i>
-                        </button>
-                      </div>
-                    </li>
-                </ol>
+                <ol class="important-urgent-list"></ol>
             </section>
 
             <section class="todo-category" id="not-important-urgent">
@@ -123,19 +75,7 @@
             </section>
 
             <section class="todo-category" id="not-important-not-urgent">
-                <ol class="not-important-not-urgent-list">
-                    <li class="todo-item">
-                      <p class="todo-item-title">Todo 4</p>
-                      <div class="todo-item__controls">
-                        <button class="todo-item-button todo-item-button--done">
-                          <i class="material-icons">done_outline</i>
-                        </button>
-                        <button class="todo-item-button todo-item-button--delete">
-                          <i class="material-icons">delete</i>
-                        </button>
-                      </div>
-                    </li>
-                </ol>
+                <ol class="not-important-not-urgent-list"></ol>
             </section>
         </div>
 
