--- a/TODO/templates/todos.html
+++ b/TODO/templates/todos.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="{{ url_for('static',filename='CSS/todo_styles.css') }}">
 
     <script type = "text/javascript" src = "{{ url_for('static', filename = 'JS/drop-down_main_menu.js') }}" ></script>
-    <script type = "text/javascript" src = "{{ url_for('static', filename = 'JS/add_item_form.js') }}" ></script>
+    <script type = "text/javascript" src = "{{ url_for('static', filename = 'JS/todo_habit_behaviour.js') }}" ></script>
 </head>
 <body>
     <header>
@@ -35,7 +35,6 @@
         <button class="add_todo_button" id="up" onclick="change_add_item_form_visibility_state('grid')">Add Todo</button>
 
         <div class="todo-container">
-            
             <div class="todo-title" id="important">
                 <p>Important</p>
             </div>
@@ -63,19 +62,87 @@
             </div>
 
             <section class="todo-category" id="important-urgent">
-                <ol class="important-urgent-list"></ol>
+                <ol class="important-urgent-list">
+                    {% for todo in mportant_urgent_todos %}
+                        {% if todo.completed %}
+                            <div class="complited-todo-item">
+                        {% else %}
+                            <div class="todo-item">
+                        {% endif %}
+                            <p class="todo-item-title">{{ todo.title }}</p>
+                            <div class="todo-item__controls">
+                                <button class="todo-item-button todo-item-button--done"/>
+                                    <i class="material-icons">done_outline</i>
+                                </button>
+                                <button class="todo-item-button todo-item-button--delete"/>
+                                    <i class="material-icons">delete</i>
+                            </div>
+                        </div>
+                    {% endfor %}
+                </ol>
             </section>
 
             <section class="todo-category" id="not-important-urgent">
-                <ol class="not-important-urgent-list"></ol>
+                <ol class="not-important-urgent-list">
+                    {% for todo in not_important_urgent_todos %}
+                        {% if todo.completed %}
+                            <div class="complited-todo-item">
+                        {% else %}
+                            <div class="todo-item">
+                        {% endif %}
+                            <p class="todo-item-title">{{ todo.title }}</p>
+                            <div class="todo-item__controls">
+                                <button class="todo-item-button todo-item-button--done"/>
+                                    <i class="material-icons">done_outline</i>
+                                </button>
+                                <button class="todo-item-button todo-item-button--delete"/>
+                                    <i class="material-icons">delete</i>
+                            </div>
+                        </div>
+                    {% endfor %}
+                </ol>
             </section>
 
             <section class="todo-category" id="important-not-urgent">
-                <ol class="important-not-urgent-list"></ol>
+                <ol class="important-not-urgent-list">
+                    {% for todo in important_not_urgent_todos %}
+                        {% if todo.completed %}
+                            <div class="complited-todo-item">
+                        {% else %}
+                            <div class="todo-item">
+                        {% endif %}
+                            <p class="todo-item-title">{{ todo.title }}</p>
+                            <div class="todo-item__controls">
+                                <button class="todo-item-button todo-item-button--done"/>
+                                    <i class="material-icons">done_outline</i>
+                                </button>
+                                <button class="todo-item-button todo-item-button--delete"/>
+                                    <i class="material-icons">delete</i>
+                            </div>
+                        </div>
+                    {% endfor %}
+                </ol>
             </section>
 
             <section class="todo-category" id="not-important-not-urgent">
-                <ol class="not-important-not-urgent-list"></ol>
+                <ol class="not-important-not-urgent-list">
+                    {% for todo in not_important_not_urgent_todos %}
+                        {% if todo.completed %}
+                            <div class="complited-todo-item">
+                        {% else %}
+                            <div class="todo-item">
+                        {% endif %}
+                            <p class="todo-item-title">{{ todo.title }}</p>
+                            <div class="todo-item__controls">
+                                <button class="todo-item-button todo-item-button--done"/>
+                                    <i class="material-icons">done_outline</i>
+                                </button>
+                                <button class="todo-item-button todo-item-button--delete"/>
+                                    <i class="material-icons">delete</i>
+                            </div>
+                        </div>
+                    {% endfor %}
+                </ol>
             </section>
         </div>
 
