created back-end part of todo completion

--- a/TODO/templates/habits.html
+++ b/TODO/templates/habits.html
@@ -11,7 +11,8 @@
     <link rel="stylesheet" href="{{ url_for('static',filename='CSS/habits_styles.css') }}">
 
     <script type = "text/javascript" src = "{{ url_for('static', filename = 'JS/drop-down_main_menu.js') }}" ></script>
-    <script type = "text/javascript" src = "{{ url_for('static', filename = 'JS/todo_habit_form_behaviour.js') }}" ></script>
+    <script type = "text/javascript" src = "{{ url_for('static', filename = 'JS/todo_habit_adding.js') }}" ></script>
+    <script type = "text/javascript" src = "{{ url_for('static', filename = 'JS/todo_habit_completing_and_deleting.js') }}" ></script>
 </head>
 <body>
     <header>
