--- a/TODO/templates/todos.html
+++ b/TODO/templates/todos.html
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="{{ url_for('static',filename='CSS/todo_styles.css') }}">
 
     <script type = "text/javascript" src = "{{ url_for('static', filename = 'JS/drop-down_main_menu.js') }}" ></script>
-    <script type = "text/javascript" src = "{{ url_for('static', filename = 'JS/todo_habit_form_behaviour.js') }}" ></script>
+    <script type = "text/javascript" src = "{{ url_for('static', filename = 'JS/todo_habit_adding.js') }}" ></script>
+    <script type = "text/javascript" src = "{{ url_for('static', filename = 'JS/todo_habit_completing_and_deleting.js') }}" ></script>
 </head>
 <body>
     <header>
@@ -74,7 +75,7 @@
 
                                 <p class="todo-item-title">{{ todo.title }}</p>
                                 <div class="todo-item__controls">
-                                    <button class="todo-item-button todo-item-button--done">
+                                    <button class="todo-item-button todo-item-button--done" onclick="complete_todo({{ todo.id }})">
                                         <i class="material-icons">done_outline</i>
                                     </button>
                                     <button class="todo-item-button todo-item-button--delete">
