created front-end part of todo completion

--- a/TODO/templates/todos.html
+++ b/TODO/templates/todos.html
@@ -71,7 +71,7 @@
                                         class="complited-todo-item"
                                      {% else %}
                                         class="todo-item"
-                                     {% endif %}>
+                                     {% endif %} id="{{ todo.id }}">
 
                                 <p class="todo-item-title">{{ todo.title }}</p>
                                 <div class="todo-item__controls">
