added moving todo to trash

--- a/TODO/templates/todos.html
+++ b/TODO/templates/todos.html
@@ -78,7 +78,7 @@
                                     <button class="todo-item-button todo-item-button--done" onclick="complete_todo({{ todo.id }})">
                                         <i class="material-icons">done_outline</i>
                                     </button>
-                                    <button class="todo-item-button todo-item-button--delete">
+                                    <button class="todo-item-button todo-item-button--delete" onclick="delete_todo({{ todo.id }})">
                                         <i class="material-icons">delete</i>
                                     </button>
                                     </div>
