added moving habit to trash

--- a/TODO/templates/habits.html
+++ b/TODO/templates/habits.html
@@ -59,7 +59,7 @@
                         <i class="material-icons">done_outline</i>
                     </button>
 
-                    <button class="habit-delete-button">
+                    <button class="habit-delete-button" onclick="delete_habit({{ habit.id }})">
                         <i class="material-icons">delete</i>
                     </button>
                 </div>
