changing parameters of displaying trash items fully completed

--- a/TODO/templates/trash.html
+++ b/TODO/templates/trash.html
@@ -31,7 +31,7 @@
         </nav>
     </header>
 
-    <main>
+    <main id="main">
         <form class="select_trash_item_type_form" id="select_trash_item_type_form">
             <p>Please select what you category want to display</p>
             <div class="part_item_type_of_select_form">
@@ -65,7 +65,7 @@
                 <div id="old-new_section">
                     <input type="radio" id="sorting_method_2"
                      name="sorting_methods" value="old-new">
-                    <label for="sorting_method_1">Old first</label>
+                    <label for="sorting_method_2">Old first</label>
                 </div>
             </div>
 
