added removing habits from the trash

--- a/TODO/templates/trash.html
+++ b/TODO/templates/trash.html
@@ -77,7 +77,7 @@
                 <div class="trash-item" id="{{ item.id }}">
                     <p class="trash-item-name">{{ item.title }}</p>
                     <p class="trash-item-category">{{ item.type }}</p>
-                    <button class="trash-item-back-button" onclick="remove_from_trash_item({{ item.id }})">Back</button>
+                    <button class="trash-item-back-button" id="back-{{ item.id }}" onclick="remove_from_trash_item({{ item.id }})" value="{{ item.type }}">Back</button>
                     <button class="trash-item-delete-button">Remove permanently</button>
                 </div>
             {% endfor %}
