Adding habits form changed

--- a/TODO/templates/habits.html
+++ b/TODO/templates/habits.html
@@ -76,7 +76,7 @@
         </div>
 
         <div class="item_name" id="periodicity">
-            <label for="item_days">Periodicity (days)</label>
+            <label for="item_days">Chill time, days</label>
             <input type="number" name="item_title" id="item_days" required>
         </div>
 
