--- a/TODO/templates/todos.html
+++ b/TODO/templates/todos.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="{{ url_for('static',filename='CSS/todo_styles.css') }}">
 
     <script type = "text/javascript" src = "{{ url_for('static', filename = 'JS/drop-down_main_menu.js') }}" ></script>
-    <script type = "text/javascript" src = "{{ url_for('static', filename = 'JS/todo_habit_adding.js') }}" ></script>
+    <script type = "module" src = "{{ url_for('static', filename = 'JS/todo_habit_adding.js') }}" ></script>
     <script type = "text/javascript" src = "{{ url_for('static', filename = 'JS/todo_habit_completing_and_deleting.js') }}" ></script>
 </head>
 <body>
