--- a/TODO/templates/todos.html
+++ b/TODO/templates/todos.html
@@ -8,6 +8,9 @@
 
     <link rel="stylesheet" href="{{ url_for('static',filename='CSS/global_style.css') }}">
     <link rel="stylesheet" href="{{ url_for('static',filename='CSS/todo_styles.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static',filename='CSS/thash_styles.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static',filename='CSS/habits_styles.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static',filename='CSS/login_register_form.css') }}">
 
     <script type = "text/javascript" src = "{{ url_for('static', filename = 'JS/drop-down_main_menu.js') }}" ></script>
     <script type = "module" src = "{{ url_for('static', filename = 'JS/todo_habit_adding.js') }}" ></script>
