--- a/TODO/templates/index.html
+++ b/TODO/templates/index.html
@@ -13,13 +13,13 @@
     <link rel="stylesheet" href="{{ url_for('static',filename='CSS/login_register_form.css') }}">
 
     <script type="module" src = './static/JS/routing.js' ></script>
-    <script type="module" src = './static/JS/todo_habit_adding.js' ></script>
+    <script type="module" src = './static/JS/todo_habit.js' ></script>
     <script type="module" src = './static/JS/navbar.js' ></script>
     <script type="module" src = './static/JS/login-register_form_confirmation.js' ></script>
     <script type="module" src = './static/JS/drop-down_login_menu.js' ></script>
     <script type="module" src = './static/JS/drop-down_main_menu.js' ></script>
 </head>
-<body>
+<body id="body_container">
     <header id="header"></header>
 
     <main id="main_container"></main>
