added navbars and redirection to login page if user not logged in

--- a/TODO/templates/index.html
+++ b/TODO/templates/index.html
@@ -19,8 +19,8 @@
     <script type="module" src = './static/JS/drop-down_login_menu.js' ></script>
     <script type="module" src = './static/JS/drop-down_main_menu.js' ></script>
 </head>
-<body id="body_container">
-    <header id="header"></header>
+<body>
+    <header id="header_container"></header>
 
     <main id="main_container"></main>
 </body>
