habit-page is added to spa proj

--- a/TODO/templates/index.html
+++ b/TODO/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>trash</title>
+    <title>TODO</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 
@@ -16,8 +16,6 @@
     <script type="module" src = './static/JS/todo_habit.js' ></script>
     <script type="module" src = './static/JS/navbar.js' ></script>
     <script type="module" src = './static/JS/login-register_form_confirmation.js' ></script>
-    <script type="module" src = './static/JS/drop-down_login_menu.js' ></script>
-    <script type="module" src = './static/JS/drop-down_main_menu.js' ></script>
 </head>
 <body>
     <header id="header_container"></header>
