--- a/TODO/templates/index.html
+++ b/TODO/templates/index.html
@@ -15,7 +15,8 @@
     <script type="module" src = './static/JS/routing.js' ></script>
     <script type="module" src = './static/JS/todo_habit.js' ></script>
     <script type="module" src = './static/JS/navbar.js' ></script>
-    <script type="module" src = './static/JS/login-register_form_confirmation.js' ></script>
+    <script type="module" src = './static/JS/login-register_form.js' ></script>
+    <script type="module" src = './static/JS/trash.js' ></script>
 </head>
 <body>
     <header id="header_container"></header>
